# COSC-6377-PA2

./: CMakeCache.txt  CMakeLists.txt  ConnectedComponents  ConnectedComponents.cbp  Makefile  a.out  cmake_install.cmake  main.cpp  mainr.cpp  mpirun.sh
